[tool.poetry]
name = "coglinker"
version = "0.1.0"
description = ""
authors = ["Irhum <13271155+irhum@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
langchain = "^0.0.107"
streamlit = "^1.20.0"
python-magic = "^0.4.27"
latex2mathml = "^3.75.1"
black = "^23.1.0"
chardet = "^5.1.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
